# clang-tidy_test_new

./: .clang-tidy  CMakeLists.txt  Jenkinsfile  something.sh
scripts/: build.sh  clang-tidy-jenkins.sh
src/: file-with-bugprone.cpp  file-without-bugprone-1.cpp  file-without-bugprone-2.cpp  test1.cpp
